--- a/components/backend-tests-go-spklvwgs/overlays/development/deployment-patch.yaml
+++ b/components/backend-tests-go-spklvwgs/overlays/development/deployment-patch.yaml
@@ -1,16 +1,16 @@
 apiVersion: apps/v1
 kind: Deployment
-metadata:   
-  annotations:  
+metadata:
+  annotations:
     tad.gitops.set/image: ".spec.template.spec.containers[0].image"
     tad.gitops.get/image: ".spec.template.spec.containers[0].image"
     tad.gitops.set/replicas: ".spec.replicas"
-    tad.gitops.get/replicas: ".spec.replicas" 
+    tad.gitops.get/replicas: ".spec.replicas"
   name: backend-tests-go-spklvwgs
 spec:
-  replicas: 1 
-  template: 
+  replicas: 1
+  template:
     spec:
       containers:
-      - image: quay.io/redhat-tssc/task-runner:1.8
-        name: container-image  
+        - image: quay.io/rhtap_qe/backend-tests-go-spklvwgs:dea87151fe024e38165c81d0e4d20cd0dd51173e@sha256:5eef391f3af07fa0f3a17aca039d83fd0921d795afe0c8ea9ddfccac8c310559
+          name: container-image
